dodanie obsługi sqlite

--- a/EspooLearnWordsAndroid/app/src/main/res/layout/activity_main.xml
+++ b/EspooLearnWordsAndroid/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,12 @@
         app:layout_constraintTop_toTopOf="parent">
     </ListView>
 
+    <Button
+        android:id="@+id/newItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="New" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
